@@ -16,7 +16,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @EqualsAndHashCode
@@ -31,8 +30,7 @@ public class Person implements Serializable, UserDetails {
 
     private String firstname;
     private String lastname;
-//    @Column(unique = true)
-//    @NotBlank(message = "Email Obrigatório")
+
     private String email;
     private String password;
 
@@ -48,18 +46,16 @@ public class Person implements Serializable, UserDetails {
    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream().map(role -> new SimpleGrantedAuthority(role.getAuthority()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public String getPassword() {
-        // TODO Auto-generated method stub
         return this.password;
     }
 
     @Override
     public String getUsername() {
-        // TODO Auto-generated method stub
         return email;
     }
 
